--- a/Back/src/ProEventos.API/appsettings.Development.json
+++ b/Back/src/ProEventos.API/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=sqlite.db"
+    "DefaultConnection": "Data Source=Angular.db"
   },
   "Logging": {
     "LogLevel": {
